Modified for testing framework